MainImage now has background-attachment: fixed on desktop viewports. Parallax section is now completely hidden on mobile devices.

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -52,14 +52,15 @@ a.toggleTheme:hover {
 }
 
 //Parallax section
-section
+section#test
 {
+   display: block;
    height: 450px;
    width: 100%;
    background: url("11.jpg") no-repeat;
    position: relative;
    overflow: hidden;
-   background-attachment: fixed; /*not supported by mobile?*/
+  //background-attachment: fixed; /*not supported by mobile*/
 }
 
 .inner
@@ -243,15 +244,15 @@ header {
 //end header
 
 .mainImage {
-   padding-top: 61px; //Move below the header
    width: 100%;
-   height: 700px;
+   height: 740px;
    background: url("../images/searching.jpg") no-repeat center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-bottom: 1px solid #252525;
+   background-attachment: fixed; /*not supported by mobile*/
 }
 
 .main {
@@ -354,8 +355,14 @@ header {
 /*Smartphones in portrait and landscape ----------- */
 @media (min-width : 320px) and (max-width : 767px) {
 
-   .mainImage{
-      padding-top: 48px; //Move below the header
+   //Hide the parallax section on mobile.
+   section#test
+   {
+      display: none;
+   }
+
+   .mainImage {
+      background-attachment: scroll; /*Fixed is not supported by mobile*/
    }
 
    header {
